--- a/app/src/main/res/layout/activity_upload_ebook.xml
+++ b/app/src/main/res/layout/activity_upload_ebook.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:padding="16dp"
+    android:background="@drawable/ic_bgg"
     android:layout_height="match_parent"
     tools:context=".UI.UploadEbookActivity">
-    <LinearLayout
+    <ImageView
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/materiu"/>
+
+
+    <ImageView
+        android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"/>
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:layout_below="@id/image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -53,28 +68,25 @@
             android:text="No File Selected"
             android:textSize="16sp"/>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="16dp">
 
-            <com.google.android.material.textfield.TextInputEditText
+
+            <EditText
                 android:id="@+id/judulPdf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Masukan judul PDF" />
 
-        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.button.MaterialButton
+
+        <Button
             android:id="@+id/uploadPdfBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/bgbtn"
             android:layout_marginTop="16dp"
             android:text="Upload PDF"
             android:textAllCaps="false" />
 
 
     </LinearLayout>
-</ScrollView>
+</RelativeLayout>
